manifests/dev/db-deployment.dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recipes-postgres
  namespace: team-tikchalal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recipes-postgres
  template:
    metadata:
      labels:
        app: recipes-postgres
    spec:
      containers:
        - name: recipes-postgres
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: pgdata
          persistentVolumeClaim:
            claimName: recipes-pgdata-pvc
