manifests/dev/ingress.dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: recipes-ingress
  namespace: team-tikchalal
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: recipes.dev.digital.idf.il
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: recipes-server-service
                port:
                  number: 8080
          # - path: /
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: recipes-frontend-service
          #       port:
          #         number: 5173
